// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CHANGE_LOCALE_SUCCESS_STATE 1returns initial state 1`] = `
Object {
  "currLocale": "en",
}
`;

exports[`CHANGE_LOCALE_SUCCESS_STATE 2returns changeLocaleSuccess state 1`] = `
Object {
  "currLocale": "locale2",
}
`;

exports[`INITIAL_STATE 1returns initial state 1`] = `
Object {
  "currLocale": "en",
}
`;

exports[`INITIAL_STATE 2returns changeLocaleSuccess state 1`] = `
Object {
  "currLocale": "locale",
}
`;
